login page edited

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -17,6 +17,9 @@
     <div class="d-flex justify-content-center">
         <p> This app helps with organizing your workout notes</p>
     </div>
+    <div class="d-flex justify-content-center">
+        <p> Test logins: (Peter123,Armin123) both with password abcabcabc123</p>
+    </div>
     <br>
 
     <div class="d-flex justify-content-center">
